nwerc/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nwerc
  namespace: default
spec:
  rules:
    - host: nwerc.eu
      http:
        paths:
          - backend:
              serviceName: nwerc-2022
              servicePort: http
    - host: 2022.nwerc.eu
      http:
        paths:
          - backend:
              serviceName: nwerc-2022
              servicePort: http
  tls:
    - hosts:
        - nwerc.eu
        - 2022.nwerc.eu
      secretName: ingress-ext-tls
